src/objects/Resource_Availability__c.object
<CustomObject>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Possible_Date__c</fullName>
        <label>Possible Date</label>
        <referenceTo>Possible_Date__c</referenceTo>
        <relationshipLabel>Resource Availabilities</relationshipLabel>
        <relationshipName>Resource_Availabilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Resource_Assignment__c</fullName>
        <label>Resource Assignment</label>
        <referenceTo>Resource_Assignment__c</referenceTo>
        <relationshipLabel>Resource Availabilities</relationshipLabel>
        <relationshipName>Resource_Availabilities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Resource Availability</label>
    <nameField>
        <label>Resource Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>